// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`布局Row快照测试 gutter = 8 1`] = `
<div
  className="sc-bdVaJa egxjhK sinoui-row"
/>
`;

exports[`布局Row快照测试 gutterType = "around" 1`] = `
<div
  className="sc-bdVaJa cOxAyq sinoui-row"
/>
`;

exports[`布局Row快照测试 justifyContent = "center" alignItems="center" 1`] = `
<div
  className="sc-bdVaJa ekNchR sinoui-row"
/>
`;

exports[`布局Row快照测试 justifyContent="center" 1`] = `
<div
  className="sc-bdVaJa knuwUu sinoui-row"
/>
`;

exports[`布局Row快照测试 默认 1`] = `
<div
  className="sc-bdVaJa vqFSF sinoui-row"
/>
`;
